dist/1.0/bin/sample/retrieveUnpackaged/objects/Service_Direction__c.object
<CustomObject>
    <description>List of Direction Discounts selected under Tariff</description>
    <fields>
        <fullName>Billing_ID__c</fullName>
        <description>ID of Direction Discount in Billing System</description>
        <inlineHelpText>ID of Direction Discount in Billing System</inlineHelpText>
        <label>Billing ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_ID__c</fullName>
        <description>ID of Directcion Discount in CSR Database</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of Directcion Discount in CSR Database</inlineHelpText>
        <label>CSR ID</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direction__c</fullName>
        <description>Relation to Direction Discount Definition</description>
        <inlineHelpText>Relation to Direction Discount Definition</inlineHelpText>
        <label>Direction</label>
        <referenceTo>Direction__c</referenceTo>
        <relationshipLabel>Service Directions</relationshipLabel>
        <relationshipName>Service_Directions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Value of granted Discount [%]</description>
        <inlineHelpText>Value of granted Discount [%]</inlineHelpText>
        <label>Discount</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <description>Amount of granted Discount (target value in currency of the Tariff)</description>
        <inlineHelpText>Amount of granted Discount (target value in currency of the Tariff)</inlineHelpText>
        <label>Price</label>
        <precision>17</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Service_Tariff__c</fullName>
        <description>Relation to Tariff, for which given Direction Discount was assigned</description>
        <inlineHelpText>Relation to Tariff, for which given Direction Discount was assigned</inlineHelpText>
        <label>Service Tariff</label>
        <referenceTo>Service_Tariff__c</referenceTo>
        <relationshipLabel>Service Directions</relationshipLabel>
        <relationshipName>Service_Directions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Record_ID__c</fullName>
        <description>ID from source system used during migration process</description>
        <externalId>true</externalId>
        <inlineHelpText>ID from source system used during migration process</inlineHelpText>
        <label>Source Record ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Valid_From__c</fullName>
        <description>Date, from which given discount should be applied</description>
        <inlineHelpText>Date, from which given discount should be applied</inlineHelpText>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_To__c</fullName>
        <description>Date, till which given discount should be applied</description>
        <inlineHelpText>Date, till which given discount should be applied</inlineHelpText>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <label>Service Direction</label>
    <nameField>
        <label>Service Direction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Directions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>